# pure0

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
examples/: beat1.scm  beat2.scm  beat3.scm  beat_lines.scm  conv_verb.scm  dark_house.scm  dark_tension.scm  dark_tension2.scm  db_example.scm  dsp_example.scm  dubstep.scm  filters.scm  idm_demo.scm  inst-gran_arc_events.scm  inst-gran_example.scm  orchestral_evolutions.scm  orchgran_arc.scm  reconstruction.scm  reference.scm  sol_idm_example.scm  sol_rhythmic_patterns_example.scm  stft_istft.scm
src/: CMakeLists.txt  beats.h  core.h  dsp.h  dsp.scm  music.h  pure0.cpp  samplesynth.h  sampsynth.h  sampsynth.scm  stdlib.scm
tests/: test_beats.scm  test_core.scm  test_dsp.scm  test_stdlib.scm
work/: orch_gran.txt
work/__pure_experiments/: concat.p0  examples.scm  glide.p0  mix.p0  pure0.tex  pure0_base.cpp  pure0_extended.cpp  pure0_test2.cpp  pure0_tests.cpp  pure0_v02.cpp  pure1.cpp  pure2.cpp  sine.p0  stdlib.p0  stdlib_ex.scm  stereo.p0  timeline.p0  timeline.scm
work/__sapf/: glide.sapf  sap.cpp  sapf.cpp  stereo.sapf  test1.sapf  test2.sapf
